Redirect to blogger

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    <title>Shahfazliz</title>
+    <META http-equiv="refresh" content="5;URL=http://codingjebat.blogspot.my/">
+  </head>
+  <body bgcolor="#ffffff">
+    <center>You will be redirected to blog automatically in 5 seconds. <a href="http://codingjebat.blogspot.my/">http://codingjebat.blogspot.my/</a>
+    </center>
+  </body>
+</html>
